2021-09-24 Bernd Stroessenreuther <booboo@gluga.de>

	* check_ssl_cert: --warning and --critical now also accept floating point numbers

2021-09-24  Matteo Corti  <corti@precise>

	* test/unit_tests.sh (oneTimeSetup): defining TMPDIR if not defined

2021-09-24 Bernd Stroessenreuther <booboo@gluga.de>

	* test/unit_tests.sh: adding a test for checking a local CRL file

2021-09-22  Matteo Corti  <matteo@corti.li>

	* Makefile (dist): make dist does not check the format (just builds the distribution)

2021-09-21  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (fetch_certificate): converts local CRLs from DER to PEM
	* check_ssl_cert (main): does not check renegotiation when checking files

2021-09-17 Bernd Stroessenreuther <booboo@gluga.de>

	* test/unit_tests.sh: fixing error with endless ping if IPv6 enabled

2021-09-17 Bernd Stroessenreuther <booboo@gluga.de>

	* check_ssl_cert: fixing error with SCT when checking a CRL file

2021-09-17  Matteo Corti  <matteo@corti.li>

	* test/unit_tests.sh (testPrometheus): added test for --prometheus

	* check_ssl_cert: Adding output for Prometheus

2021-09-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (critical): Applied a patch to fix the output of multiple errors
	* check_ssl_cert (main): Automatically assume localhost if --file is specified

2021-09-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (usage): Added an option to ignore OCSP server errors
	* check_ssl_cert (check_ocsp): Fixed the detection of an internal error

2021-09-02  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (hours_until): computes the date with dconv if date -f is missing

2021-09-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): detects old BSD date without -f

2021-08-31  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): added -crlf to the connection for the renegotiation test

2021-08-27  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): skipping the CN check on IP addresses
